@@ -2,6 +2,7 @@
 * 0.2.1
 *
 
+- Fixed bug in Windows service shutdown code
 - Windows console:
 	- Action properties dialog improved
 
